[package]
name = "rustybfd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.2"
num-traits = "0.2.18"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["time", "sync", "net"] }
tracing = "0.1.40"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
humantime = "2.1.0"
tracing-subscriber = "0.3.18"
tokio = { version = "1.36.0", features = ["full"] }
